client: fix style for collapsed state of 'position: fixed' elements

--- a/client/Main/styl/resurrection.sidebar.styl
+++ b/client/Main/styl/resurrection.sidebar.styl
@@ -121,6 +121,7 @@ sidebarSelectedBg = #262626
         font-weight     400
         rounded         3px
         shadow          none
+        z-index         1000
 
 .activity-sidebar
   font-family         openSansFamily
