--- a/client/Social/Activity/styl/activity.styl
+++ b/client/Social/Activity/styl/activity.styl
@@ -1620,6 +1620,7 @@ span.collapsedtext
   padding               58px 34px 0 34px
   background            #fff
   margin-left           -34px
+  vendor                transform, translateX(0)
   borderBox()
 
   .list-previous-link
@@ -1975,8 +1976,9 @@ span.collapsedtext
   .reply-input-widget
     position            fixed
     bottom              0
+    left                34px
     height              auto
-    kalc                width, 100% \- 360px
+    width               100%
     max-width           532px
     padding             0 0 30px
     bg                  color white
@@ -2327,6 +2329,7 @@ body.group.members
     width         auto
     padding       9px 0
     z-index       10
+    left          34px
     borderBox()
     abs()
 
